<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.games.kripa.guessthemovie.GameDescription"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarstartmatch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/grey"
        app:theme = "@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="200dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/filmymastinoimg"
            android:scaleType="fitCenter"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/game_description_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/game_description"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/games_steps_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/player1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player1_steps_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player1_steps_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player1_steps_3a"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player1_steps_3b"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player1_steps_4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/player2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player2_steps_1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player2_steps_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player2_steps_3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/player2_steps_4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/scoring_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:text="@string/scoring_info"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/cancellation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/notes"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button1"
            android:text="@string/go_back_to_main"
            android:id="@+id/goback"
            android:layout_centerHorizontal="true" />
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
